@@ -5,19 +5,18 @@ import lombok.experimental.UtilityClass;
 @UtilityClass
 public class TypeResolver {
 
-  public Object parseToType(String propertyValue, Class<?> type) {
-
+  public Object parseToType(String value, Class<?> type) {
     if (type == String.class) {
-      return propertyValue;
+      return value;
     } else if (type == int.class || type == Integer.class) {
-      return Integer.parseInt(propertyValue);
+      return Integer.parseInt(value);
     } else if (type == long.class || type == Long.class) {
-      return Long.parseLong(propertyValue);
+      return Long.parseLong(value);
     } else if (type == double.class || type == Double.class) {
-      return Double.parseDouble(propertyValue);
+      return Double.parseDouble(value);
     }
 
     throw new ClassCastException(
-        String.format("Can't cast value \"%s\" to %s class", propertyValue, type.getSimpleName()));
+        "Failed to cast %s value to %s type".formatted(value, type.getSimpleName()));
   }
 }
